@@ -1,5 +1,17 @@
 2001-03-23  Akim Demaille  <akim@epita.fr>
 
+	* automake.in (&macro_define): Don't rely on $1.
+	Initialize the variable.
+	Set its Automakism only if not defined or if given to the user.
+	When concatenating values, insert a separator only if the value
+	was not empty.
+	(&read_am_file): When dumping the @var_list, skip Automake
+	variables.
+	(&file_contents): Use macro_define.
+
+	
+2001-03-23  Akim Demaille  <akim@epita.fr>
+
 	* automake.in (&rule_define): Extract from...
 	(&read_am_file): here.
 
